# ComputerAlgebraTask

./: .gitignore  Essay.aux  Essay.fdb_latexmk  Essay.fls  Essay.out  Essay.tex  FGLM.mw  Report.tex
src/: CMakeLists.txt  main.cpp
src/Exceptions/OrderExceptions/: OrderException.cpp  OrderException.h  UnexpectedOperationException.cpp  UnexpectedOperationException.h
src/Exceptions/ParserExceptions/: DivisionByZero.cpp  DivisionByZero.h  InvalidArgument.cpp  InvalidArgument.h  LostOperand.cpp  LostOperand.h  NotNumberDivision.cpp  NotNumberDivision.h  ParseException.cpp  ParseException.h  UnsupportedOperation.cpp  UnsupportedOperation.h  WrongToken.cpp  WrongToken.h
src/FGLM/: FGLM.cpp  FGLM.h
src/Google_tests/: CMakeLists.txt  ParserTest.cpp  PolynomialOperationsTest.cpp  TreeOperationTest.cpp
src/Parser/: Parser.cpp  Parser.h
src/PolymonialPrimitives/: Polynomial.cpp  Polynomial.h
src/PolymonialPrimitives/Operations/: Operation.cpp  Operation.h  Variable.cpp  Variable.h
src/PolynomialOperations/ArithmeticOperations/: ArithmeticOperations.cpp  ArithmeticOperations.h
src/PolynomialOperations/Divide/: Devide.h
src/PolynomialOperations/Join/: Join.cpp  Join.h
src/PolynomialOperations/MonomialOrder/: MonomialOrder.cpp  MonomialOrder.h
src/PolynomialOperations/MonomialOrder/Orders/: Grlex.cpp  Grlex.h  Lex.cpp  Lex.h  Plex.cpp  Plex.h
src/PolynomialOperations/MonomialslJoiner/: Join.cpp  Join.h
src/PolynomialOperations/Simplify/: Equals.cpp  Equals.h  Simplify.cpp  Simplify.h
src/PolynomialTree/MonomialThings/: MonomialThings.cpp  MonomialThings.h
src/PolynomialTree/PolynomialPrimitives/: Associativity.h
src/PolynomialTree/PolynomialPrimitives/Node/: Node.h
src/PolynomialTree/PolynomialPrimitives/Operands/: Constant.cpp  Constant.h  Variable.cpp  Variable.h
src/PolynomialTree/PolynomialPrimitives/Operations/AbstractOperations/: AbstractBinaryOperation.cpp  AbstractBinaryOperation.h  AbstractUnaryOperation.cpp  AbstractUnaryOperation.h
src/PolynomialTree/PolynomialPrimitives/Operations/Operations/: BinaryMinus.cpp  BinaryMinus.h  Divide.cpp  Divide.h  Exponentiation.cpp  Exponentiation.h  Multiplication.cpp  Multiplication.h  Sum.cpp  Sum.h  UnaryMinus.cpp  UnaryMinus.h
src/RationalNumber/: Rational.cpp  Rational.h  RationalNumber.cpp  RationalNumber.h
src/Utils/: Utils.h
src/mtl4/tools/doxygen/: doxygen_navigation.py
src/mtl4/tools/license/: insert_license.py
